--- a/README
+++ b/README
@@ -2,6 +2,8 @@
 README / Sofia-SIP - RFC3261 compliant SIP User-Agent library
 =============================================================
 
+ [![Build Status](https://secure.travis-ci.org/davehorton/sofia-sip.png)](http://travis-ci.org/davehorton/sofia-sip)
+ 
 Introduction
 ------------
 
